# fastapi-django-graphql

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  run-django.sh  run-fastapi.sh
apps/api/: admin.py  models.py  urls.py
apps/api/schema/: mutations.py  queries.py  types.py
core/: asgi.py  config.py  schema.py  urls.py  wsgi.py
core/settings/: base.py
core/utils/: graphql.py  models.py  permissions.py  schema.py  settings.py
